fix: 修复浮窗中块滚动条样式异常问题 | Fixed the issue of abnormal style of block scrollbar in the floating window.

--- a/style/module/panel-editor.less
+++ b/style/module/panel-editor.less
@@ -21,6 +21,7 @@
             background-color: transparent;
             box-shadow: 0 0 var(--custom-toolbar-tiem-active-box-shadow-spread) 0 var(--custom-box-shadow-color);
             z-index: 1; // 避免被块滚动条覆盖
+            right: -20px;
         }
     }
 }
@@ -130,7 +131,8 @@
     padding: 0;
 
     .protyle-scroll__bar {
-        right: -98px;
+        // right: -97px;
+        right: calc(3px - var(--b3-dynamicscroll-width) / 2);
         // z-index: 1;
     }
 }
